tests/golden/snapshots/render_scaffolders_matrix__account_vault_totals.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct Vault {
    pub owner: Pubkey,
    pub total: u64,
}
// === sunscreen:auto-generated:end segment=file ===
