tests/golden/snapshots/render_scaffolders_matrix__account_vec_payload.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct Blob {
    pub data: Vec<u8>,
}
// === sunscreen:auto-generated:end segment=file ===
