tests/golden/snapshots/render_scaffolders_matrix__dispatch_segment_no_args.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub fn ping(ctx: Context<Ping>) -> Result<()> {
    instructions::ping::handler(ctx)
}
