tests/golden/snapshots/render_scaffolders_matrix__error_variant_AlreadyClosed.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("vault is already closed")]
AlreadyClosed,
