tests/golden/snapshots/render_scaffolders_matrix__error_variant_AlreadyOpen.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("vault is already open")]
AlreadyOpen,
