tests/golden/snapshots/render_scaffolders_matrix__error_variant_BadQuote.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("quote contained \"bad\" content")]
BadQuote,
