tests/golden/snapshots/render_scaffolders_matrix__error_variant_InvalidMint.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("mint does not match")]
InvalidMint,
