tests/golden/snapshots/render_scaffolders_matrix__error_variant_MathOverflow.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("calculation overflowed")]
MathOverflow,
