tests/golden/snapshots/render_scaffolders_matrix__error_variant_MissingBump.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("required bump was not found")]
MissingBump,
