tests/golden/snapshots/render_scaffolders_matrix__error_variant_PathIssue.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("path contains \\ separator")]
PathIssue,
