tests/golden/snapshots/render_scaffolders_matrix__error_variant_Unauthorized.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[msg("caller is not authorized")]
Unauthorized,
